Introduce Notification Service
* Introduce Notification Service

* xsename email module to notification

* Implement notification functionality

* Offload emails to background thread

* Notification service

* Notification service

* Refactor integration test env for notification service

* Notification service native support
