# openapi-doc/src/main/spec/one-stop-openapi.yaml
@@ -14,13 +14,15 @@ tags:
   - name: "auth"
     description: "Operations related to authentication"
   - name: "users"
-    description: "Operations about users"
+    description: "Operations related to users"
   - name: "rails"
-    description: "Operations about rails"
+    description: "Operations related to rails"
   - name: "accounts"
-    description: "Operations about accounts"
+    description: "Operations related to accounts"
   - name: "transactions"
-    description: "Operations about account transactions"
+    description: "Operations related to account transactions"
+  - name: "notifications"
+    description: "Operations related to user notifications"
 
 paths:
   /auth/login:
@@ -831,6 +833,61 @@ paths:
         "500":
           description: "Internal server error"
 
+  /notifications:
+    get:
+      tags: [ "notifications" ]
+      summary: "Get recent notifications"
+      description: "Get notifications for the authenticated user dated after a given date-time"
+      operationId: "getNotifications"
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - name: "after"
+          in: "query"
+          description: "ID of account to filter transactions"
+          example: 2019-01-01T14:25:32.201Z
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        "200":
+          description: "successful operation"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/NotificationResponse"
+        "401":
+          description: "Unauthorized"
+        "500":
+          description: "Internal server error"
+
+  /notifications/{id}:
+    delete:
+      tags: [ "notifications" ]
+      summary: "Delete notification"
+      description: "Delete the identified notifications"
+      operationId: "deleteNotification"
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of notification to be deleted"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "204":
+          description: "successful operation"
+        "401":
+          description: "Unauthorized"
+        "500":
+          description: "Internal server error"
+
 components:
   securitySchemes:
     cookieAuth:
@@ -880,7 +937,6 @@ components:
         correlationId:
           description: The identifier to relate this error to server log entries.
           type: string
-          format: uuid
         severity:
           description: An indication of the severity of the error.
           type: string
@@ -1568,3 +1624,36 @@ components:
           description: The list of transactions
           items:
             $ref: "#/components/schemas/TransactionSummaryResponse"
+
+    NotificationResponse:
+      type: object
+      required:
+        - id
+        - timestamp
+        - topic
+        - severity
+        - message
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: The notification Id
+          example: 07061d76-74f3-4163-aa07-fb6909681f81
+        timestamp:
+          type: string
+          format: date-time
+          description: The notification date and time
+          example: 2019-01-01T00:00:00.000Z
+        topic:
+          type: string
+          description: The topic in which the notification is categorised.
+        correlationId:
+          description: The identifier to relate this notification to server log entries.
+          type: string
+        severity:
+          description: An indication of the severity of the notification.
+          type: string
+          enum: [info, warn, error]
+        message:
+          description: The notification message to be displayed.
+          type: string
